--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     compile depends.hystrixDashboard
     compile depends.ribbon
     compile depends.zuul
+    compile depends.configStart
     compile depends.springCloudSecurity
 }
