--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -2,12 +2,15 @@ server:
   port: 38200
 
 spring:
-  profiles: ${active}
+  profiles:
+    active: ${active}
   application:
-    name: zuul-server
+    name: zuul
   cloud:
     config:
-      uri: http://admin:admin123@127.0.0.1:38100/eureka/
+      uri: http://admin:admin123@127.0.0.1:38100
+      label: ${active}
+      profile: ${active}
 
 
 
