--- a/config.gradle
+++ b/config.gradle
@@ -3,11 +3,14 @@ ext {
             springCloudDependencies:    "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion",
             springBootGradlePlugin:     "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion",
             eurekaServer:               "org.springframework.cloud:spring-cloud-starter-netflix-eureka-server",
+            eurekaClient:               "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             configServer:               "org.springframework.cloud:spring-cloud-config-server",
             configStart:                "org.springframework.cloud:spring-cloud-starter-config",
             hystrixDashboard:           "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard",
+            hystrix:                    "org.springframework.cloud:spring-cloud-starter-netflix-hystrix",
             ribbon:                     "org.springframework.cloud:spring-cloud-starter-netflix-ribbon",
             zuul:                       "org.springframework.cloud:spring-cloud-starter-netflix-zuul",
+            gateway:                    "org.springframework.cloud:spring-cloud-starter-gateway",
             springCloudSecurity:        "org.springframework.cloud:spring-cloud-starter-security",
             springBootWeb:              "org.springframework.boot:spring-boot-starter-web",
             springBootTest:             "org.springframework.boot:spring-boot-starter-test"
