--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,9 @@ include 'zuul'
 include 'common'
 include 'common-api'
 include 'gateway'
+include 'auth'
+include 'echo'
+include 'gateway-admin'
+include 'organization'
+include 'common-db'
 
