--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,7 @@ jdk_version=11
 springBootVersion=2.2.6.RELEASE
 springCloudVersion = Hoxton.SR3
 dependencyManagementVersion=1.0.9.RELEASE
+mysqlConnector=8.0.20
+
+
 projectEncoding=UTF-8
