--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,13 @@
 rootProject.name = 'cashier'
-include 'eureka'
-include 'config'
-include 'zuul'
 include 'common'
 include 'common-api'
+include 'common-db'
+include 'common-web'
+include 'eureka'
+include 'config'
 include 'gateway'
-include 'auth'
 include 'echo'
 include 'gateway-admin'
 include 'organization'
-include 'common-db'
+include 'authentication'
 
