--- a/config.gradle
+++ b/config.gradle
@@ -12,10 +12,17 @@ ext {
             zuul:                       "org.springframework.cloud:spring-cloud-starter-netflix-zuul",
             gateway:                    "org.springframework.cloud:spring-cloud-starter-gateway",
             springCloudSecurity:        "org.springframework.cloud:spring-cloud-starter-security",
-            springBootWeb:              "org.springframework.boot:spring-boot-starter-web",
-            springBootTest:             "org.springframework.boot:spring-boot-starter-test",
-            springBootJpa:              "org.springframework.boot:spring-boot-starter-data-jpa",
-            mysql:                      "mysql:mysql-connector-java",
+            springSecurityOauth:        "org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE",
+            SecurityOauth2AutoConfig:   "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure",
+            springBootWeb:              "org.springframework.boot:spring-boot-starter-web:$springBootVersion",
+            springBootTest:             "org.springframework.boot:spring-boot-starter-test:$springBootVersion",
+            springBootJpa:              "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion",
+            mysql:                      "mysql:mysql-connector-java:$mysqlConnector",
+            servlet:                    "javax.servlet:javax.servlet-api:4.0.1",
+            commonsLang:                "org.apache.commons:commons-lang3:3.10",
+            lombok:                     "org.projectlombok:lombok:1.18.12",
+            xmlBind:                    "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2",
+            jaxbRuntime:                "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 
     ]
 
