--- a/config.gradle
+++ b/config.gradle
@@ -6,8 +6,11 @@ ext {
             eurekaClient:               "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             configServer:               "org.springframework.cloud:spring-cloud-config-server",
             configStart:                "org.springframework.cloud:spring-cloud-starter-config",
+            openFeign:                  "org.springframework.cloud:spring-cloud-starter-openfeign",
+            feignOkHttp:                "io.github.openfeign:feign-okhttp",
             hystrixDashboard:           "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard",
             hystrix:                    "org.springframework.cloud:spring-cloud-starter-netflix-hystrix",
+            hystrixJavanica:            "com.netflix.hystrix:hystrix-javanica:1.5.18",
             ribbon:                     "org.springframework.cloud:spring-cloud-starter-netflix-ribbon",
             zuul:                       "org.springframework.cloud:spring-cloud-starter-netflix-zuul",
             gateway:                    "org.springframework.cloud:spring-cloud-starter-gateway",
@@ -22,7 +25,8 @@ ext {
             commonsLang:                "org.apache.commons:commons-lang3:3.10",
             lombok:                     "org.projectlombok:lombok:1.18.12",
             xmlBind:                    "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2",
-            jaxbRuntime:                "org.glassfish.jaxb:jaxb-runtime:2.3.2"
+            jaxbRuntime:                "org.glassfish.jaxb:jaxb-runtime:2.3.2",
+
 
     ]
 
