--- a/echo/build.gradle
+++ b/echo/build.gradle
@@ -1,6 +1,11 @@
+version '1.0.0-SNAPSHOT'
+
 dependencies {
     compile project(':common')
 
     compile depends.eurekaServer
     compile depends.springBootWeb
+    compile depends.springSecurityOauth
+    compile depends.springCloudSecurity
+    compile depends.securityOauth2AutoConfig
 }
