--- a/echo/src/main/resources/bootstrap.yml
+++ b/echo/src/main/resources/bootstrap.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: authentication
+    name: echo
   profiles:
     active: ${active}
 
 server:
-  port: 39000
+  port: 8080
 
 eureka:
   client:
@@ -16,7 +16,4 @@ eureka:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
     prefer-ip-address: true
-
-
-
 
