--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,10 +1,12 @@
+version '1.0.0-SNAPSHOT'
+
 dependencies {
     compile project(':common')
-
 
     compile depends.eurekaClient
     compile depends.hystrix
     compile depends.ribbon
     compile depends.gateway
-    compile depends.configStart
+    compile depends.openFeign
+    compile depends.feignOkHttp
 }
