--- a/organization/build.gradle
+++ b/organization/build.gradle
@@ -2,12 +2,13 @@ version '1.0.0-SNAPSHOT'
 
 dependencies {
     compile project(':common-db')
-    compile project(':common-web')
-
 
     compile depends.springSecurityOauth
     compile depends.springCloudSecurity
     compile depends.eurekaClient
-    compile depends.springBootWeb
     compile depends.securityOauth2AutoConfig
+    compile depends.servlet
+    compile depends.springBootWeb
+    compile depends.openFeign
+    compile depends.feignOkHttp
 }
