--- a/organization/src/main/resources/bootstrap.yml
+++ b/organization/src/main/resources/bootstrap.yml
@@ -2,16 +2,26 @@ server:
   port: 39100
 
 spring:
-  datasource:
-    url: jdbc:mysql://mysql:3306/db_org?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2b8
-    username: root
-    password: 123456
+  profiles:
+    active: ${active}
+  application:
+    name: organization
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://admin:admin123@eureka:38000/eureka/  # 注册中心访问地址
+  instance:
+    hostname: eureka
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
+    prefer-ip-address: true
 
 
 security:
   oauth2:
     resource:
-      userInfoUri: http://authentication:39000/user
+      userInfoUri: http://gateway:38200/api/auth/user
 
 
 
