--- a/common-web/build.gradle
+++ b/common-web/build.gradle
@@ -2,5 +2,6 @@ version '1.0.0'
 
 dependencies {
     compile project(':common')
-
+    compile depends.springBootWeb
+    compile depends.springTX
 }
