--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 org.gradle.jvmargs=-Xmx2048m
 org.gradle.parallel=true
 jdk_version=11
-springBootVersion=2.2.6.RELEASE
+springBootVersion=2.2.7.RELEASE
+springVersion=5.2.6.RELEASE
 springCloudVersion = Hoxton.SR3
 dependencyManagementVersion=1.0.9.RELEASE
 mysqlConnector=8.0.20
