--- a/config.gradle
+++ b/config.gradle
@@ -7,6 +7,7 @@ ext {
             eurekaClient:               "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client",
             configServer:               "org.springframework.cloud:spring-cloud-config-server",
             configStart:                "org.springframework.cloud:spring-cloud-starter-config",
+            busAmqp:                    "org.springframework.cloud:spring-cloud-starter-bus-amqp",
             openFeign:                  "org.springframework.cloud:spring-cloud-starter-openfeign",
             feignOkHttp:                "io.github.openfeign:feign-okhttp",
             hystrixDashboard:           "org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard",
@@ -15,6 +16,7 @@ ext {
             ribbon:                     "org.springframework.cloud:spring-cloud-starter-netflix-ribbon",
             zuul:                       "org.springframework.cloud:spring-cloud-starter-netflix-zuul",
             gateway:                    "org.springframework.cloud:spring-cloud-starter-gateway",
+            gatewayCore:                "org.springframework.cloud:spring-cloud-gateway-core",
             springCloudSecurity:        "org.springframework.cloud:spring-cloud-starter-security",
             springSecurityJwt:          "org.springframework.security:spring-security-jwt:1.1.0.RELEASE",
             springSecurityOauth:        "org.springframework.security.oauth:spring-security-oauth2:2.4.1.RELEASE",
@@ -24,14 +26,19 @@ ext {
             springBootTest:             "org.springframework.boot:spring-boot-starter-test:$springBootVersion",
             springBootJpa:              "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion",
             springBootRedisReactive:    "org.springframework.boot:spring-boot-starter-data-redis-reactive:$springBootVersion",
-            jetcacheRedis:              "com.alicp.jetcache:jetcache-starter-redis:2.6.0",
+            springBootRedis:            "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion",
+            jetcacheRedis:              "com.alicp.jetcache:jetcache-starter-redis:2.5.16",
+            jedis:                      "redis.clients:jedis:2.10.2",
             mysql:                      "mysql:mysql-connector-java:$mysqlConnector",
+            jakartaPersistence:         "jakarta.persistence:jakarta.persistence-api:2.2.3",
             servlet:                    "javax.servlet:javax.servlet-api:4.0.1",
             commonsLang:                "org.apache.commons:commons-lang3:3.10",
+            commonsPool2:               "org.apache.commons:commons-pool2:2.8.0",
             lombok:                     "org.projectlombok:lombok:1.18.12",
             xmlBind:                    "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3",
             jaxbRuntime:                "org.glassfish.jaxb:jaxb-runtime:2.3.3",
             jjwt:                       "io.jsonwebtoken:jjwt:0.9.1",
+            jacksonDatabind:            "com.fasterxml.jackson.core:jackson-databind:2.11.0",
 
 
     ]
