--- a/config.gradle
+++ b/config.gradle
@@ -16,6 +16,7 @@ ext {
             ribbon:                     "org.springframework.cloud:spring-cloud-starter-netflix-ribbon",
             zuul:                       "org.springframework.cloud:spring-cloud-starter-netflix-zuul",
             gateway:                    "org.springframework.cloud:spring-cloud-starter-gateway",
+            bus:                        "org.springframework.cloud:spring-cloud-bus",
             gatewayCore:                "org.springframework.cloud:spring-cloud-gateway-core",
             springCloudSecurity:        "org.springframework.cloud:spring-cloud-starter-security",
             springSecurityJwt:          "org.springframework.security:spring-security-jwt:1.1.0.RELEASE",
@@ -28,6 +29,7 @@ ext {
             springBootJpa:              "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion",
             springBootRedisReactive:    "org.springframework.boot:spring-boot-starter-data-redis-reactive:$springBootVersion",
             springBootRedis:            "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion",
+            springBootActuator:         "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion",
             jetcacheRedis:              "com.alicp.jetcache:jetcache-starter-redis:2.5.16",
             jedis:                      "redis.clients:jedis:2.10.2",
             mysql:                      "mysql:mysql-connector-java:$mysqlConnector",
