--- a/center/build.gradle
+++ b/center/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     compile depends.eurekaClient
     compile depends.busAmqp
     compile depends.springBootWeb
+    compile depends.springBootActuator
 }
