--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -11,5 +11,7 @@ dependencies {
     compile depends.jetcacheRedis
     compile depends.jedis
     compile depends.xmlBind
+    compile depends.configStart
     compile depends.busAmqp
+    compile depends.springBootActuator
 }
