--- a/echo/src/main/resources/bootstrap.yml
+++ b/echo/src/main/resources/bootstrap.yml
@@ -3,6 +3,15 @@ spring:
     name: echo
   profiles:
     active: ${active}
+  security:
+    user:
+      name: admin
+      password: admin123
+  cloud:
+    config:
+      uri: http://admin:admin123@config:38100
+      label: ${active}
+      profile: ${active}
 
 server:
   port: 39200
