--- a/echo/build.gradle
+++ b/echo/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     compile depends.busAmqp
     compile depends.springBootActuator
     compile depends.springBootWeb
+    compile depends.streamRabbit
 }
