add zipkin sleuth to modules

--- a/authentication-server/build.gradle
+++ b/authentication-server/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     compile depends.ribbon
     compile depends.xmlBind
     compile depends.jaxbRuntime
+    compile depends.zipkin
 }
