--- a/authentication-server/src/main/resources/application-dev.yml
+++ b/authentication-server/src/main/resources/application-dev.yml
@@ -4,3 +4,11 @@ logging:
   file:
     path: logs/
     max-size: 10MB
+
+spring:
+  zipkin:
+    enabled: true
+    baseUrl: http://127.0.0.1:9411
+  sleuth:
+    sampler:
+      rate: 100
