--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile depends.configStart
     compile depends.busAmqp
     compile depends.springBootActuator
+    compile depends.zipkin
 }
