--- a/echo/src/main/resources/application-dev.yml
+++ b/echo/src/main/resources/application-dev.yml
@@ -30,6 +30,12 @@ spring:
                 username: ${RABBIT_MQ_USERNAME:guest}
                 password: ${RABBIT_MQ_PASSWORD:guest}
                 virtual-host: /
+  zipkin:
+    enabled: true
+    baseUrl: http://127.0.0.1:9411
+  sleuth:
+    sampler:
+      rate: 100
 
 management:
   endpoints:
