--- a/organization/src/main/resources/application-dev.yml
+++ b/organization/src/main/resources/application-dev.yml
@@ -3,3 +3,10 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/db_org?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2b8
     username: root
     password: 123456
+
+  zipkin:
+    enabled: true
+    baseUrl: http://127.0.0.1:9411
+  sleuth:
+    sampler:
+      rate: 100
